--- a/bot/package.json
+++ b/bot/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "chatgpt-discord-bot",
+  "name": "quantified-self",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "./prod/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.ts"
+    "build": "tsc",
+    "dev": "node ./index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.8.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "node-cron": "^3.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.35.0"
   }
 }
